import javascript module

--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,6 @@
         <feComposite in="SourceGraphic" in2="goo" operator="atop" />
       </filter>
     </svg>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
