--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
         <h3>Child</h3>
       </div>
     </div>
+    <div class="child-container"></div>
     <svg viewBox="0 0 1 1" xmlns="http://www.w3.org/2000/svg" version="1.1" id="svg-goo-filter">
       <filter id="gooey" colorInterpolationFilters="sRGB">
         <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
